syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcEntitySchema.proto";
import "GrpcEnums.proto";
import "google/protobuf/wrappers.proto";

// Mutation is responsible for setting up a new `SortableAttributeCompoundSchema` in the `EntitySchema`.
// Mutation can be used for altering also the existing `SortableAttributeCompoundSchema` alone.
message GrpcCreateSortableAttributeCompoundSchemaMutation {
  // Name of the sortable attribute compound the mutation is targeting.
  string name = 1;
  // Contains description of the model is optional but helps authors of the schema / client API to better
  // explain the original purpose of the model to the consumers.
  google.protobuf.StringValue description = 2;
  // Deprecation notice contains information about planned removal of this sortable attribute compound from
  // the model / client API.
  // This allows to plan and evolve the schema allowing clients to adapt early to planned breaking changes.
  google.protobuf.StringValue deprecationNotice = 3;
  // Defines list of individual elements forming this compound.
  repeated GrpcAttributeElement attributeElements = 4;
  // When attribute sortable compound is indexed, it is possible to sort entities by this calculated attribute compound.
  // This property contains set of all scopes this attribute compound is indexed in.
  repeated GrpcEntityScope indexedInScopes = 5;
}

// Mutation is responsible for setting value to a `SortableAttributeCompoundSchema.deprecationNotice` in `EntitySchema`
// or `ReferenceSchema`.
message GrpcModifySortableAttributeCompoundSchemaDeprecationNoticeMutation {
  // Name of the sortable attribute compound the mutation is targeting.
  string name = 1;
  // Deprecation notice contains information about planned removal of this sortable attribute compound from
  // the model / client API.
  // This allows to plan and evolve the schema allowing clients to adapt early to planned breaking changes.
  google.protobuf.StringValue deprecationNotice = 2;
}

// Mutation is responsible for setting value to a `SortableAttributeCompoundSchema.description` in `EntitySchema` or
// `ReferenceSchema`.
message GrpcModifySortableAttributeCompoundSchemaDescriptionMutation {
  // Name of the sortable attribute compound the mutation is targeting.
  string name = 1;
  // Contains description of the model is optional but helps authors of the schema / client API to better
  // explain the original purpose of the model to the consumers.
  google.protobuf.StringValue description = 2;
}

// Mutation is responsible for renaming an existing `SortableAttributeCompoundSchema` in `EntitySchema` or `ReferenceSchema`.
message GrpcModifySortableAttributeCompoundSchemaNameMutation {
  // Name of the sortable attribute compound the mutation is targeting.
  string name = 1;
  // New name of the sortable attribute compound the mutation is targeting.
  string newName = 2;
}

// Mutation is responsible for setting set of scopes for indexing value in a `SortableAttributeCompoundSchema` in `EntitySchema`.
message GrpcSetSortableAttributeCompoundIndexedMutation {
  // Name of the sortable attribute compound the mutation is targeting.
  string name = 1;
  // When attribute sortable compound is indexed, it is possible to sort entities by this calculated attribute compound.
  // This property contains set of all scopes this attribute compound is indexed in.
  repeated GrpcEntityScope indexedInScopes = 2;
}

// Mutation is responsible for removing an existing `SortableAttributeCompound` in the `EntitySchema` or `ReferenceSchema`.
message GrpcRemoveSortableAttributeCompoundSchemaMutation {
  // Name of the sortable attribute compound the mutation is targeting.
  string name = 1;
}

message GrpcSortableAttributeCompoundSchemaMutation {
  oneof mutation {
    GrpcCreateSortableAttributeCompoundSchemaMutation createSortableAttributeCompoundSchemaMutation = 1;
    GrpcModifySortableAttributeCompoundSchemaDeprecationNoticeMutation modifySortableAttributeCompoundSchemaDeprecationNoticeMutation = 2;
    GrpcModifySortableAttributeCompoundSchemaDescriptionMutation modifySortableAttributeCompoundSchemaDescriptionMutation = 3;
    GrpcModifySortableAttributeCompoundSchemaNameMutation modifySortableAttributeCompoundSchemaNameMutation = 4;
    GrpcRemoveSortableAttributeCompoundSchemaMutation removeSortableAttributeCompoundSchemaMutation = 5;
    GrpcSetSortableAttributeCompoundIndexedMutation setSortableAttributeCompoundIndexedMutation = 6;
  }
}